# cpe-2.3-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
requirements/: requirements.ods
src/: cpe.rs  lib.rs
src/cpe/: error.rs  wfn.rs
src/cpe/wfn/: tests.rs
